# LLM_transformer_helloworld

./: .gitignore  README.md  model_generate_工作原理详解.md
T1/T1/: README.md  T1 小小数学助手.docx  evaluate.py  pyproject.toml  submission.py
T1/T1/data/: test_data_1.jsonl  test_data_2.jsonl
T2/T2/: README.md  T2 多样性数据生成与相似度计算.docx  evaluate.py  generate_dataset.py  pyproject.toml  submission.py
T2/T2/data/: dataset.jsonl  test_data_1.jsonl
